force-app/main/default/objects/Sentinel_Prediction__c/Sentinel_Prediction__c.object-meta.xml
<CustomObject>
    <label>Sentinel Prediction</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Prediction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentinel Predictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>