force-app/main/default/objects/Sentinel_Prediction__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sentinel Incident</label>
    <referenceTo>Sentinel_Incident__c</referenceTo>
    <relationshipLabel>Sentinel Predictions</relationshipLabel>
    <relationshipName>Sentinel_Predictions</relationshipName>
    <type>Lookup</type>
</CustomField>