force-app/main/default/objects/Sentinel_Prediction__c/fields/Operator_Decision__c.field-meta.xml
<CustomField>
    <fullName>Operator_Decision__c</fullName>
    <label>Operator Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Useful</fullName>
            </value>
            <value>
                <fullName>False Positive</fullName>
            </value>
            <value>
                <fullName>Approved Mitigation</fullName>
            </value>
            <value>
                <fullName>Dismissed - False Positive</fullName>
            </value>
            <value>
                <fullName>Dismissed - Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>