force-app/main/default/objects/Sentinel_Prediction__c/fields/Recommended_Runbook__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Runbook__c</fullName>
    <label>Recommended Runbook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>